--- a/Axit.css
+++ b/Axit.css
@@ -12,30 +12,30 @@ div.row {
 }
 
 div.header {
+  min-height: 70px;
   position: fixed;
   z-index: 2;
-  height: 70px;
   background-color: #000000;
   color: #ffffff;
 }
 
 div.header_logo {
   float: left;
-  padding: 0 0 0 25px;
   width: 30%;
+  padding: 0 0 0 25px;
 }
 
 div.header_menu {
   float: right;
-  padding: 0 25px 0 0;
   width: 70%;
+  padding: 0 25px 0 0;
 }
 
 ul.header {
-  list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
+  list-style-type: none;
 }
 
 li.header {
@@ -62,8 +62,8 @@ li.header a:hover {
 }
 
 div.header_medium {
-  display: none;
   float: right;
+  display: none;
 }
 
 .dropdown_content {
@@ -78,10 +78,10 @@ div.header_medium {
 }
 
 .dropdown_content a {
-  color: white;
-  padding: 12px 16px;
-  text-decoration: none;
   display: block;
+  padding: 12px 16px;
+  color: white;
+  text-decoration: none;
   text-align: left;
 }
 
@@ -96,12 +96,13 @@ div.header_medium:hover .dropdown_content {
 
 div.main_back {
   position: relative;
-  height: 710px;
+  min-height: 710px;
   background: url("Axit_Bacground.jpg")  no-repeat center;
   background-size: cover;
 }
 
 div.main_left {
+  float: left;
   padding: 158px 10px 20px 25px;
 }
 
@@ -116,17 +117,137 @@ p.main_left_normal {
 }
 
 div.download {
-  width: 135px;
-  height: 42px;
-  border: 2px solid white;
+  max-width: 135px;
+  min-height: 42px;
   margin: 40px 0 0 2px;
   padding-top: 10px;
+  border: 2px solid white;
   color: white;
   text-align: center;
 }
 
 div.download:hover {
   background-color: lightseagreen;
+}
+
+div.main_right {
+  float: right;
+  padding: 188px 25px 20px 10px;
+}
+
+div.main_right_form {
+  float: right;
+  max-width: 360px;
+  overflow: auto;
+  border-radius: 5px;
+}
+
+div.main_form_row {
+  display: flex;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+div.main_form_top {
+  min-height: 54px;
+  background-color: #f5f5f5;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+span.orange {
+  color: orange;
+}
+
+div.main_form_bottom {
+  padding: 0;
+  background-color: white;
+  color: white;
+}
+
+input.main_form_bottom_text {
+  width: 78%;
+  padding: 8px 10px;
+  margin: 30px 20px 10px;
+  border: none;
+  border-bottom: 1px solid #d6d6d6;
+}
+
+input.main_form_bottom_submit {
+  width: 100%;
+  margin: 30px 0 0;
+  padding: 19px 32px;
+  background-color: #ff9b51;
+  border: none;
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+div.row_social {
+  display: flex;
+  min-height: 105px;
+  z-index: 2;
+  box-shadow: 2px 2px 5px red ;
+}
+
+div.social_left {
+  width: 40%;
+}
+
+div.social_right {
+  width: 60%;
+}
+
+p.row_social_text {
+  width: 100%;
+  margin: 0;
+  padding-left: 25px;
+}
+
+p.social_bold {
+  font-size: 22px;
+  font-weight: bold;
+  color: black;
+}
+
+p.social_normal {
+  font-size: 17px;
+  color: #86878b;
+}
+
+.fa {
+  width: 13%;
+  padding: 10px 0;
+  font-size: 48px;
+  text-align: center;
+  text-decoration: none;
+  background: white;
+  color: #cccccc;
+}
+
+div.row_back_white {
+  display: flex;
+  min-height: 595px;
+  background-color: white;
+}
+
+div.row_back_grey {
+  display: flex;
+  min-height: 595px;
+  background-color: #f5f5f5;
+}
+
+div.row_tabs {
+  
+}
+
+div.row_sublist {
+  
 }
 
 /* For desktop: */
