--- a/Axit.css
+++ b/Axit.css
@@ -208,6 +208,11 @@ li.header-list a:hover {
   color: black;
 }
 
+.text-big {
+  font-size: 35px;
+  color: black;
+}
+
 .text-normal {
   font-size: 17px;
   color: #86878b;
@@ -296,16 +301,13 @@ li.header-list a:hover {
 .sublist-image{
   max-width: 100%;
   max-height: 302px;
+  margin-top: 45px;
   box-shadow: 10px 10px 30px #aaaaaa;
   background-repeat: no-repeat;
   background-size: contain;
 }
 
-.row-sublist-left {
-  padding: 120px 10px 10px 25px;
-}
-
-.row-sublist-right {
+.row-sublist {
   padding: 75px 10px 10px 10px;
 }
 
@@ -337,6 +339,76 @@ li.sublist-icon-down {
   height: auto;
   padding-left: 70px;
   padding-top: 0;
+}
+
+.row-back-white-block {
+  display: block;
+  min-height: 595px;
+  background-color: white;
+}
+
+.row-back-grey-block {
+  display: block;
+  min-height: 595px;
+  background-color: #f5f5f5;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.sublist-column {
+  display: flex;
+}
+
+.sublist-column-padding {
+  margin: 50px 10px;
+  padding: 10px;
+  align-self: flex-end;
+}
+
+.awesome-ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.awesome-ul li {
+  padding: 11px 16px;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.awesome-black {
+  color: white;
+  background-color: #333333;
+}
+
+.awesome-orange {
+  color: white;
+  background-color: #ff8b38;
+}
+
+.awesome-grey {
+  color: #999999;
+}
+
+.awesome-text-big {
+  margin: 20px 0;
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.awesome-li-bottom {
+  border-bottom: 5px solid #ff8b38!important;
+}
+
+.awesome-li-bottom-none {
+  border-bottom: none!important;
+}
+
+.awesome-white {
+  color: #86878b;
+  background-color: white;
 }
 
 /* For desktop: */
@@ -395,6 +467,10 @@ li.sublist-icon-down {
   }
   
   .row-back-grey {
+    display: block;
+  }
+
+  .sublist-column {
     display: block;
   }
 
